# OptiMySQL

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mysqlmanager.cpp  mysqlmanager.h
